exports[`prefer-while-loop-condition > invalid(1): while (true) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tfor (const item of items) {\n\t\tif (done(item)) {\n\t\t\tbreak;\n\t\t}\n\t}\n} 1`] = `

   1 | while (true) {
   2 | 	if (!hasMore()) {
   3 | 		break;
   4 | 	}
   5 |
   6 | 	for (const item of items) {
   7 | 		if (done(item)) {
   8 | 			break;
   9 | 		}
  10 | 	}
  11 | }

`;

exports[`prefer-while-loop-condition > invalid(1): while (true) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tfor (const item of items) {\n\t\tif (done(item)) {\n\t\t\tbreak;\n\t\t}\n\t}\n} 2`] = `

Message:
   1 | while (true) {
>  2 | 	if (!hasMore()) {
     | 	^^^^^^^^^^^^^^^^^
>  3 | 		break;
     | ^^^^^^^^
>  4 | 	}
     | ^^ Prefer putting the condition in the \`while\` statement.
   5 |
   6 | 	for (const item of items) {
   7 | 		if (done(item)) {
   8 | 			break;
   9 | 		}
  10 | 	}
  11 | }

Output:
  1 | while (hasMore()) {
  2 |
  3 | 	for (const item of items) {
  4 | 		if (done(item)) {
  5 | 			break;
  6 | 		}
  7 | 	}
  8 | }

`;

exports[`prefer-while-loop-condition > invalid(10): for (;;) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tif (skip) {\n\t\tcontinue;\n\t}\n\n\tprocessNext();\n} 1`] = `

   1 | for (;;) {
   2 | 	if (!hasMore()) {
   3 | 		break;
   4 | 	}
   5 |
   6 | 	if (skip) {
   7 | 		continue;
   8 | 	}
   9 |
  10 | 	processNext();
  11 | }

`;

exports[`prefer-while-loop-condition > invalid(10): for (;;) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tif (skip) {\n\t\tcontinue;\n\t}\n\n\tprocessNext();\n} 2`] = `

Message:
   1 | for (;;) {
>  2 | 	if (!hasMore()) {
     | 	^^^^^^^^^^^^^^^^^
>  3 | 		break;
     | ^^^^^^^^
>  4 | 	}
     | ^^ Prefer putting the condition in the \`while\` statement.
   5 |
   6 | 	if (skip) {
   7 | 		continue;
   8 | 	}
   9 |
  10 | 	processNext();
  11 | }

Output:
  1 | while (hasMore()) {
  2 |
  3 | 	if (skip) {
  4 | 		continue;
  5 | 	}
  6 |
  7 | 	processNext();
  8 | }

`;

exports[`prefer-while-loop-condition > invalid(11): do {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} while (true); 1`] = `

  1 | do {
  2 | 	if (!hasMore()) {
  3 | 		break;
  4 | 	}
  5 |
  6 | 	processNext();
  7 | } while (true);

`;

exports[`prefer-while-loop-condition > invalid(11): do {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} while (true); 2`] = `

Message:
  1 | do {
> 2 | 	if (!hasMore()) {
    | 	^^^^^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 |
  6 | 	processNext();
  7 | } while (true);

Output:
  1 | while (hasMore()) {
  2 |
  3 | 	processNext();
  4 | }

`;

exports[`prefer-while-loop-condition > invalid(12): do {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tif (skip) {\n\t\tcontinue;\n\t}\n\n\tprocessNext();\n} while (true); 1`] = `

   1 | do {
   2 | 	if (!hasMore()) {
   3 | 		break;
   4 | 	}
   5 |
   6 | 	if (skip) {
   7 | 		continue;
   8 | 	}
   9 |
  10 | 	processNext();
  11 | } while (true);

`;

exports[`prefer-while-loop-condition > invalid(12): do {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tif (skip) {\n\t\tcontinue;\n\t}\n\n\tprocessNext();\n} while (true); 2`] = `

Message:
   1 | do {
>  2 | 	if (!hasMore()) {
     | 	^^^^^^^^^^^^^^^^^
>  3 | 		break;
     | ^^^^^^^^
>  4 | 	}
     | ^^ Prefer putting the condition in the \`while\` statement.
   5 |
   6 | 	if (skip) {
   7 | 		continue;
   8 | 	}
   9 |
  10 | 	processNext();
  11 | } while (true);

Output:
  1 | while (hasMore()) {
  2 |
  3 | 	if (skip) {
  4 | 		continue;
  5 | 	}
  6 |
  7 | 	processNext();
  8 | }

`;

exports[`prefer-while-loop-condition > invalid(13): do {\n\tif (!hasMore()) break;\n\tprocessNext();\n} while (true); 1`] = `

  1 | do {
  2 | 	if (!hasMore()) break;
  3 | 	processNext();
  4 | } while (true);

`;

exports[`prefer-while-loop-condition > invalid(13): do {\n\tif (!hasMore()) break;\n\tprocessNext();\n} while (true); 2`] = `

Message:
  1 | do {
> 2 | 	if (!hasMore()) break;
    | 	^^^^^^^^^^^^^^^^^^^^^^ Prefer putting the condition in the \`while\` statement.
  3 | 	processNext();
  4 | } while (true);

Output:
  1 | while (hasMore()) {
  2 | 	processNext();
  3 | }

`;

exports[`prefer-while-loop-condition > invalid(14): do {\n\tif (done || cancelled) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} while (true); 1`] = `

  1 | do {
  2 | 	if (done || cancelled) {
  3 | 		break;
  4 | 	}
  5 |
  6 | 	processNext();
  7 | } while (true);

`;

exports[`prefer-while-loop-condition > invalid(14): do {\n\tif (done || cancelled) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} while (true); 2`] = `

Message:
  1 | do {
> 2 | 	if (done || cancelled) {
    | 	^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 |
  6 | 	processNext();
  7 | } while (true);

Output:
  1 | while (!(done || cancelled)) {
  2 |
  3 | 	processNext();
  4 | }

`;

exports[`prefer-while-loop-condition > invalid(15): while (true) {\n\tif (done) {\n\t\tbreak;\n\t}\n\n\tvar done = true;\n\twork();\n} 1`] = `

  1 | while (true) {
  2 | 	if (done) {
  3 | 		break;
  4 | 	}
  5 |
  6 | 	var done = true;
  7 | 	work();
  8 | }

`;

exports[`prefer-while-loop-condition > invalid(15): while (true) {\n\tif (done) {\n\t\tbreak;\n\t}\n\n\tvar done = true;\n\twork();\n} 2`] = `

Message:
  1 | while (true) {
> 2 | 	if (done) {
    | 	^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 |
  6 | 	var done = true;
  7 | 	work();
  8 | }

Output:
  1 | while (!done) {
  2 |
  3 | 	var done = true;
  4 | 	work();
  5 | }

`;

exports[`prefer-while-loop-condition > invalid(16): while (true) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n} 1`] = `

  1 | while (true) {
  2 | 	if (!hasMore()) {
  3 | 		break;
  4 | 	}
  5 | }

`;

exports[`prefer-while-loop-condition > invalid(16): while (true) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n} 2`] = `

Message:
  1 | while (true) {
> 2 | 	if (!hasMore()) {
    | 	^^^^^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 | }

Output:
  1 | while (hasMore()) {
  2 | }

`;

exports[`prefer-while-loop-condition > invalid(17): for (;;) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n} 1`] = `

  1 | for (;;) {
  2 | 	if (!hasMore()) {
  3 | 		break;
  4 | 	}
  5 | }

`;

exports[`prefer-while-loop-condition > invalid(17): for (;;) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n} 2`] = `

Message:
  1 | for (;;) {
> 2 | 	if (!hasMore()) {
    | 	^^^^^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 | }

Output:
  1 | while (hasMore()) {
  2 | }

`;

exports[`prefer-while-loop-condition > invalid(18): for (; true;) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n} 1`] = `

  1 | for (; true;) {
  2 | 	if (!hasMore()) {
  3 | 		break;
  4 | 	}
  5 | }

`;

exports[`prefer-while-loop-condition > invalid(18): for (; true;) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n} 2`] = `

Message:
  1 | for (; true;) {
> 2 | 	if (!hasMore()) {
    | 	^^^^^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 | }

Output:
  1 | while (hasMore()) {
  2 | }

`;

exports[`prefer-while-loop-condition > invalid(19): do {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n} while (true); 1`] = `

  1 | do {
  2 | 	if (!hasMore()) {
  3 | 		break;
  4 | 	}
  5 | } while (true);

`;

exports[`prefer-while-loop-condition > invalid(19): do {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n} while (true); 2`] = `

Message:
  1 | do {
> 2 | 	if (!hasMore()) {
    | 	^^^^^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 | } while (true);

Output:
  1 | while (hasMore()) {
  2 | }

`;

exports[`prefer-while-loop-condition > invalid(2): while (true) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tswitch (value) {\n\t\tcase 1:\n\t\t\tbreak;\n\t}\n} 1`] = `

   1 | while (true) {
   2 | 	if (!hasMore()) {
   3 | 		break;
   4 | 	}
   5 |
   6 | 	switch (value) {
   7 | 		case 1:
   8 | 			break;
   9 | 	}
  10 | }

`;

exports[`prefer-while-loop-condition > invalid(2): while (true) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tswitch (value) {\n\t\tcase 1:\n\t\t\tbreak;\n\t}\n} 2`] = `

Message:
   1 | while (true) {
>  2 | 	if (!hasMore()) {
     | 	^^^^^^^^^^^^^^^^^
>  3 | 		break;
     | ^^^^^^^^
>  4 | 	}
     | ^^ Prefer putting the condition in the \`while\` statement.
   5 |
   6 | 	switch (value) {
   7 | 		case 1:
   8 | 			break;
   9 | 	}
  10 | }

Output:
  1 | while (hasMore()) {
  2 |
  3 | 	switch (value) {
  4 | 		case 1:
  5 | 			break;
  6 | 	}
  7 | }

`;

exports[`prefer-while-loop-condition > invalid(20): while (true) {\n\tif (!value!) {\n\t\tbreak;\n\t}\n\n\tprocess(value);\n} 1`] = `

  1 | while (true) {
  2 | 	if (!value!) {
  3 | 		break;
  4 | 	}
  5 |
  6 | 	process(value);
  7 | }

`;

exports[`prefer-while-loop-condition > invalid(20): while (true) {\n\tif (!value!) {\n\t\tbreak;\n\t}\n\n\tprocess(value);\n} 2`] = `

Message:
  1 | while (true) {
> 2 | 	if (!value!) {
    | 	^^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 |
  6 | 	process(value);
  7 | }

Output:
  1 | while (value!) {
  2 |
  3 | 	process(value);
  4 | }

`;

exports[`prefer-while-loop-condition > invalid(21): while (true) {\n\tif (value!) {\n\t\tbreak;\n\t}\n\n\tprocess(value);\n} 1`] = `

  1 | while (true) {
  2 | 	if (value!) {
  3 | 		break;
  4 | 	}
  5 |
  6 | 	process(value);
  7 | }

`;

exports[`prefer-while-loop-condition > invalid(21): while (true) {\n\tif (value!) {\n\t\tbreak;\n\t}\n\n\tprocess(value);\n} 2`] = `

Message:
  1 | while (true) {
> 2 | 	if (value!) {
    | 	^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 |
  6 | 	process(value);
  7 | }

Output:
  1 | while (!(value!)) {
  2 |
  3 | 	process(value);
  4 | }

`;

exports[`prefer-while-loop-condition > invalid(3): while (true) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tfunction stop() {\n\t\twhile (done) {\n\t\t\tbreak;\n\t\t}\n\t}\n} 1`] = `

   1 | while (true) {
   2 | 	if (!hasMore()) {
   3 | 		break;
   4 | 	}
   5 |
   6 | 	function stop() {
   7 | 		while (done) {
   8 | 			break;
   9 | 		}
  10 | 	}
  11 | }

`;

exports[`prefer-while-loop-condition > invalid(3): while (true) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tfunction stop() {\n\t\twhile (done) {\n\t\t\tbreak;\n\t\t}\n\t}\n} 2`] = `

Message:
   1 | while (true) {
>  2 | 	if (!hasMore()) {
     | 	^^^^^^^^^^^^^^^^^
>  3 | 		break;
     | ^^^^^^^^
>  4 | 	}
     | ^^ Prefer putting the condition in the \`while\` statement.
   5 |
   6 | 	function stop() {
   7 | 		while (done) {
   8 | 			break;
   9 | 		}
  10 | 	}
  11 | }

Output:
  1 | while (hasMore()) {
  2 |
  3 | 	function stop() {
  4 | 		while (done) {
  5 | 			break;
  6 | 		}
  7 | 	}
  8 | }

`;

exports[`prefer-while-loop-condition > invalid(4): while (true) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} 1`] = `

  1 | while (true) {
  2 | 	if (!hasMore()) {
  3 | 		break;
  4 | 	}
  5 |
  6 | 	processNext();
  7 | }

`;

exports[`prefer-while-loop-condition > invalid(4): while (true) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} 2`] = `

Message:
  1 | while (true) {
> 2 | 	if (!hasMore()) {
    | 	^^^^^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 |
  6 | 	processNext();
  7 | }

Output:
  1 | while (hasMore()) {
  2 |
  3 | 	processNext();
  4 | }

`;

exports[`prefer-while-loop-condition > invalid(5): while (true) {\n\tif (!hasMore()) break;\n\tprocessNext();\n} 1`] = `

  1 | while (true) {
  2 | 	if (!hasMore()) break;
  3 | 	processNext();
  4 | }

`;

exports[`prefer-while-loop-condition > invalid(5): while (true) {\n\tif (!hasMore()) break;\n\tprocessNext();\n} 2`] = `

Message:
  1 | while (true) {
> 2 | 	if (!hasMore()) break;
    | 	^^^^^^^^^^^^^^^^^^^^^^ Prefer putting the condition in the \`while\` statement.
  3 | 	processNext();
  4 | }

Output:
  1 | while (hasMore()) {
  2 | 	processNext();
  3 | }

`;

exports[`prefer-while-loop-condition > invalid(6): while (true) {\n\tif (done) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} 1`] = `

  1 | while (true) {
  2 | 	if (done) {
  3 | 		break;
  4 | 	}
  5 |
  6 | 	processNext();
  7 | }

`;

exports[`prefer-while-loop-condition > invalid(6): while (true) {\n\tif (done) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} 2`] = `

Message:
  1 | while (true) {
> 2 | 	if (done) {
    | 	^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 |
  6 | 	processNext();
  7 | }

Output:
  1 | while (!done) {
  2 |
  3 | 	processNext();
  4 | }

`;

exports[`prefer-while-loop-condition > invalid(7): while (true) {\n\tif (done || cancelled) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} 1`] = `

  1 | while (true) {
  2 | 	if (done || cancelled) {
  3 | 		break;
  4 | 	}
  5 |
  6 | 	processNext();
  7 | }

`;

exports[`prefer-while-loop-condition > invalid(7): while (true) {\n\tif (done || cancelled) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} 2`] = `

Message:
  1 | while (true) {
> 2 | 	if (done || cancelled) {
    | 	^^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 |
  6 | 	processNext();
  7 | }

Output:
  1 | while (!(done || cancelled)) {
  2 |
  3 | 	processNext();
  4 | }

`;

exports[`prefer-while-loop-condition > invalid(8): for (;;) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} 1`] = `

  1 | for (;;) {
  2 | 	if (!hasMore()) {
  3 | 		break;
  4 | 	}
  5 |
  6 | 	processNext();
  7 | }

`;

exports[`prefer-while-loop-condition > invalid(8): for (;;) {\n\tif (!hasMore()) {\n\t\tbreak;\n\t}\n\n\tprocessNext();\n} 2`] = `

Message:
  1 | for (;;) {
> 2 | 	if (!hasMore()) {
    | 	^^^^^^^^^^^^^^^^^
> 3 | 		break;
    | ^^^^^^^^
> 4 | 	}
    | ^^ Prefer putting the condition in the \`while\` statement.
  5 |
  6 | 	processNext();
  7 | }

Output:
  1 | while (hasMore()) {
  2 |
  3 | 	processNext();
  4 | }

`;

exports[`prefer-while-loop-condition > invalid(9): for (; true;) {\n\tif (!hasMore()) break;\n\tprocessNext();\n} 1`] = `

  1 | for (; true;) {
  2 | 	if (!hasMore()) break;
  3 | 	processNext();
  4 | }

`;

exports[`prefer-while-loop-condition > invalid(9): for (; true;) {\n\tif (!hasMore()) break;\n\tprocessNext();\n} 2`] = `

Message:
  1 | for (; true;) {
> 2 | 	if (!hasMore()) break;
    | 	^^^^^^^^^^^^^^^^^^^^^^ Prefer putting the condition in the \`while\` statement.
  3 | 	processNext();
  4 | }

Output:
  1 | while (hasMore()) {
  2 | 	processNext();
  3 | }

`;
